--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,107 +1,91 @@
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+  --color-primary: #fff480;
+  --color-secondary: #ff5757;
+  --color-tertiary: #f5f5f7;
+  --color-quarternary: #80bbff;
+  --text-color-light: #fff;
+  --text-color-dark: #000;
+  --font-style-thin: "Poppins-Thin";
+  --font-style-regular: "Poppins-Regular";
+  --font-style-bold: "Poppins-Bold";
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@import "bootstrap/dist/css/bootstrap.css";
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+/* width */
+::-webkit-scrollbar {
+  width: 0.4rem;
 }
 
-* {
-  box-sizing: border-box;
+/* Track */
+::-webkit-scrollbar-track {
+  background: #fff;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  /* background: rgb(0, 169, 157);
+  background: linear-gradient(
+    180deg,
+    rgba(0, 169, 157, 1) 0%,
+    rgba(247, 201, 52, 1) 34%,
+    rgba(241, 60, 88, 1) 100%
+  );
+  border-radius: 50px; */
+  background: var(--color-secondary);
+}
+
+/* Handle on hover */
+/* ::-webkit-scrollbar-thumb:hover {
+  background: #0b0d17;
+} */
+
+*,
+*::before,
+*::after {
   padding: 0;
   margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  box-sizing: inherit;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  box-sizing: border-box;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+/* html {
+  font-size: 62.5%;
+} */
+
+@font-face {
+  font-family: "Poppins-thin";
+  src: url("../assets/fonts/Poppins-Thin.ttf");
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+@font-face {
+  font-family: "Poppins-regular";
+  src: url("../assets/fonts/Poppins-Regular.ttf");
+}
+
+@font-face {
+  font-family: "Poppins-bold";
+  src: url("../assets/fonts/Poppins-Bold.ttf");
+}
+
+.heading-primary {
+  font-family: var(--font-style-bold);
+  font-size: 3.5rem;
+  text-transform: capitalize;
+}
+
+.heading-secondary {
+  font-family: var(--font-style-bold);
+  font-size: 2rem;
+  text-transform: capitalize;
+}
+
+.paragraph-primary {
+  font-family: var(--font-style-regular);
+  font-size: 1.2rem;
+  text-transform: capitalize;
+  margin: 3rem 0;
 }
