--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,6 +75,13 @@ body {
   text-transform: capitalize;
 }
 
+.heading-primary--red {
+  font-family: var(--font-style-bold);
+  font-size: 2.9rem;
+  text-transform: capitalize;
+  color: var(--color-secondary);
+}
+
 .heading-secondary {
   font-family: var(--font-style-bold);
   font-size: 2rem;
@@ -86,4 +93,12 @@ body {
   font-size: 1.2rem;
   text-transform: capitalize;
   margin: 3rem 0;
+}
+
+.paragraph-primary--red {
+  font-family: var(--font-style-regular);
+  font-size: 1.2rem;
+  text-transform: capitalize;
+  margin: 3rem 0;
+  color: var(--color-secondary);
 }
