--- a/src/pages/service-section/style.css
+++ b/src/pages/service-section/style.css
@@ -15,3 +15,13 @@
   font-size: 1.2rem;
   text-transform: capitalize;
 }
+
+@media screen and (max-width: 768px) {
+  .section-services__content-box div ul li {
+    font-size: 1rem;
+  }
+
+  .section-services__img-box {
+    display: none;
+  }
+}
